Adicionado postagens e barra de menu fixa

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,15 +10,27 @@ body {
 	background: #f3f3f3;
 }
 
+h2 {
+	color: #b9c941;
+}
+
 #navegacao {
 	background: #fff;
 	border-bottom: 1px solid #d8d8d8;
 	height: 45px;
+	position: fixed;
+	width: 100%;	
+	top: 0;
 }
 
 #area {
 	width: 720px;
 	margin: 0 auto;
+}
+
+#area-principal {
+	width: 720px;
+	margin: 55px auto 10px auto;
 }
 
 #logo {
@@ -28,6 +40,12 @@ body {
 #menu {
 	float: right;
 	padding: 10px 0;
+}
+
+#postagem {
+	background: #fff;
+	padding: 10px;
+	margin-bottom: 10px;
 }
 
 /* Formatação do menu  */
@@ -59,4 +77,23 @@ a:active {
 /*  Classes */
 .verde {
 	color: #b9c941;
+}
+.data-postagem {
+	font-size: 14px;	
+	border-bottom: 1px solid #f4f4f4;
+	display: block;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+}
+
+.img-postagem {
+	float: left;	
+	margin: 0 10px 5px 0;
+}
+
+.postado {
+	border-left: 5px solid #d8d8d8;
+	padding-left: 5px;
+	display: block;
+	margin-top: 10px;
 }
